--- a/src/component/form/form.tpl.html
+++ b/src/component/form/form.tpl.html
@@ -1,13 +1,13 @@
-<script type ="text/ng-template" id="sanji-time-form.tpl.html">
-  <form ng-submit="vm.save(vm.data)" role="form" layout="column" layout-padding novalidate>
+<script type="text/ng-template" id="sanji-time-form.tpl.html">
+  <form ng-submit="$ctrl.save($ctrl.data)" role="form" layout="column" layout-padding novalidate>
     <formly-form
-      model="vm.data.content"
-      fields="vm.data.fields"
-      options="vm.data.formOptions"
-      form="vm.form">
+      model="$ctrl.data.content"
+      fields="$ctrl.data.fields"
+      options="$ctrl.data.formOptions"
+      form="$ctrl.form">
       <div layout layout-align="end center">
         <md-button type="submit" aria-label="submit"
-        class="md-raised md-primary" ng-disabled="vm.form.$invalid">
+        class="md-raised md-primary" ng-disabled="$ctrl.form.$invalid">
           <sapn translate="TIME_FORM_SAVE"></span>
         </md-button>
       </div>
